syntax = "proto3";
package server;

service Get {
    rpc GetStats (StatsRequest) returns (StatsReply);
}

message StatsRequest {
    string name = 1;
}

message StatsReply {
    string message = 1;
}